--- a/project/images/templates/images/source_main.html
+++ b/project/images/templates/images/source_main.html
@@ -1,7 +1,7 @@
 {% extends "images/base_source.html" %}
 {% load guardian_tags %}
 {% load thumbnail %}
-{% load show_markdown %}
+{% load markdown_to_html %}
 
 {% block title %}{{ source.name }} | CoralNet{% endblock %}
 
@@ -190,7 +190,7 @@ $(document).ready(function() {
         {% for news in news_items %}
             <tr>
                 <td> <a href="{% url 'newsfeed_details' news.id %}">{{news.datetime}}</a></td>
-                <td> {{ news.message|show_markdown|safe }} </td>
+                <td> {{ news.message|markdown_to_html }} </td>
             </tr>
         {% endfor %}
         </table>
