--- a/project/newsfeed/templates/newsfeed/global.html
+++ b/project/newsfeed/templates/newsfeed/global.html
@@ -7,14 +7,22 @@
 <table class="detail_table_scroll">
     <tr>
         <th>time</th>
-        <th>app</th>
+        <th>category</th>
+        <th>user</th>
         <th>source</th>
         <th>event</th>
     </tr>
     {% for news in news_items %}
         <tr>
             <td> <a href="{% url 'newsfeed_details' news.id %}">{{news.datetime}}</a></td>
-            <td> {{ news.app }} </td>
+            <td> {{ news.category }} </td>
+
+            {% if news.user_exists %}
+                <td> <a href="{% url 'profile_detail' news.user_id %}">{{news.user_username}}</a></td>
+            {% else %}
+                <td> {{ news.user_name }} (deleted) </td>
+            {% endif %}
+
             {% if news.source_exists %}
                 <td> <a href="{% url 'source_main' news.source_id %}">{{news.source_name}}</a></td>
             {% else %}
