minor tuning of landing page

--- a/project/static/css/index.css
+++ b/project/static/css/index.css
@@ -38,7 +38,6 @@
 #intro a.sign-in{
     font-size: 1.8em;
     margin: 0 20px 0 520px;
-
 }
 
 #intro a.register{
@@ -48,6 +47,7 @@
 }
 
 #intro a.about{
+    font-size: 1.8em;
     margin: 0 0 0 20px;
 }
 
