--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -129,6 +129,7 @@
             <li><a href="{{ forum_link }}"><span>Forum</span></a></li>
             <li><a href="{% url 'blog:entry_list' %}"><span>Blog</span></a></li>
             <li><a href="{% url 'about' %}"><span>About</span></a></li>
+            <li><a href="https://github.com/beijbom/coralnet"><span>GitHub</span></a></li>
           </ul>
         </div>
         {% block footer_extra %}{% endblock %}
