less github icons

--- a/project/lib/templates/lib/index.html
+++ b/project/lib/templates/lib/index.html
@@ -48,10 +48,7 @@
     </div>
 
     <h1>CoralNet <span class="beta">BETA</span></h1>
-    <h2>A Web solution for coral reef analysis
-    <a href="https://github.com/beijbom/coralnet">
-            <img border="0" alt="GitHub" src={% static "img/GitHub-Mark-32px.png" %} width="30"></a></h2>
-
+    <h2>An web solution for coral reef analysis</h2>
     <p>Upload coral reef images, organize and annotate images, and view annotation statistics.</p>
 
     <a class="sign-in" href="{% url 'login' %}">Sign In</a>
