--- a/project/lib/templates/lib/about.html
+++ b/project/lib/templates/lib/about.html
@@ -16,17 +16,15 @@
         CoralNet is a resource for benthic images analysis.
         The site deploys deep neural networks which allow fully and semi automated annotation of images.
         It also serves as a data repository and collaboration platform.
-        CoralNet is <a href="https://github.com/beijbom/coralnet">open source</a> and
-        free to use thanks to generous support from NSF and NOAA.
+        CoralNet is open source and free to use thanks to generous support from NSF and NOAA.
     </p>
 
     <ul class="indexlist">
     <li class="first-item"><a href="#site">site</a></li>
     <li><a href="#story">story</a></li>
     <li><a href="#datapolicy">data policy</a></li>
-    <li><a href="#acknowledgments">acknowledgments</a></li>
+    <li><a href="#acknowledgments">credits</a></li>
     <li><a href="#people">people</a></li>
-
     <li><a href="#press">press</a></li>
     </ul>
 
@@ -189,7 +187,7 @@
 
     <p class="uparrow border"><a href="#main">&#9650</a></p>
     
-    <h2 id="acknowledgments">Acknowledgments<a class="section-anchor" data-scroll-name="#acknowledgments"></a></h2>
+    <h2 id="acknowledgments">Credits<a class="section-anchor" data-scroll-name="#acknowledgments"></a></h2>
     <p>
         CoralNet has been supported from the following grants.
     </p>
