--- a/project/lib/templates/lib/index.html
+++ b/project/lib/templates/lib/index.html
@@ -48,7 +48,7 @@
     </div>
 
     <h1>CoralNet <span class="beta">BETA</span></h1>
-    <h2>An web solution for coral reef analysis</h2>
+    <h2>A web solution for coral reef analysis</h2>
     <p>Upload coral reef images, organize and annotate images, and view annotation statistics.</p>
 
     <a class="sign-in" href="{% url 'login' %}">Sign In</a>
