Added Andreas grant

--- a/project/lib/templates/lib/about.html
+++ b/project/lib/templates/lib/about.html
@@ -196,8 +196,9 @@
     <li> NOAA: <i>Grants NA10OAR4320156, NA15OAR4320071 </i> under the  <a href="http://marineresearchpartners.com/nmfs_aiasi/Home.html">  Automated Image Analysis Strategic Initiative</a>, 2014 - 2019.</li>
 
     <li> NOAA: <i>CoralNet: Tackling Bottlenecks in Coral Reef Image Analysis with
-        Next Gen Deep Networks for Photographs to Large Mosaics, 2019 - 2020.</i> </li>
-    <li>  <a href="https://www.pacificbluefoundation.org/"> Pacific Blue Foundation.</a></li>
+        Next Gen Deep Networks for Photographs to Large Mosaics, </i> 2019 - 2020.</li>
+    <li> NOAA: <i>Quantifying Coral Reef Net Calcification Capacity and Vulnerability in the Context of Ocean Acidification, </i>2019 - 2021.</li>
+    <li> <a href="https://www.pacificbluefoundation.org/"> Pacific Blue Foundation.</a></li>
     </ul>
     <p>
         The following papers are relevant to the development of CoralNet.
