API job detail: Tests failed because BeautifulSoup had problems parsing the request_json HTML (BS somehow inserted illegal `</br>` tags); here we fix the tests by just changing the <br> scheme to an unordered list, which is better HTML semantics anyway.

--- a/project/api_management/templates/api_management/job_detail.html
+++ b/project/api_management/templates/api_management/job_detail.html
@@ -51,8 +51,14 @@ tr[data-status="{{ FAILURE }}"] {
         <td>{{ unit.id }}</td>
         <td>{{ unit.type }}</td>
         <td>{{ unit.status_display }}</td>
-        <td>{{ unit.request_json_display|linebreaks }}</td>
-        <td>{{ unit.error_display|linebreaks }}</td>
+        <td>
+          <ul class="detail_list">
+            {% for rj_string in unit.request_json_strings %}
+              <li>{{ rj_string }}</li>
+            {% endfor %}
+          </ul>
+        </td>
+        <td>{{ unit.error_display }}</td>
       </tr>
     {% endfor %}
   </tbody>
