--- a/project/blog/templates/blog/entry_list.html
+++ b/project/blog/templates/blog/entry_list.html
@@ -1,7 +1,7 @@
 {% extends "blog/base.html" %}
 
 {% block content %}
-  <h1>CoralNet news blog</h1>
+  <h1>Welcome to the CoralNet blog!</h1>
 
   {% for entry in entries %}
     <div class="blog-entry-row">
