added an entry for saved vs trained robots on source main page

--- a/project/images/templates/images/source_main.html
+++ b/project/images/templates/images/source_main.html
@@ -83,7 +83,8 @@ $(document).ready(function() {
                     <li>Machine annotator: Disabled (can enable upon <a href="{{ forum_link }}">request</a>)</li>
                 {% else %}
                 {% if robot_stats.has_robot %}
-                    <li>Last classifier trained: {{robot_stats.create_date}}</li>
+                    <li>Last classifier saved: {{robot_stats.create_date_saved}}</li>
+                    <li>Last classifier trained: {{robot_stats.create_date_trained}}</li>
                 {% endif %}
             {% endif %}
             </ul>
