--- a/project/lib/templates/lib/about.html
+++ b/project/lib/templates/lib/about.html
@@ -262,6 +262,7 @@
     <h3>Alumni</h3>
         <ul>
             <li>Qimin Chen - ML researcher </li>
+            <li>Haoming Zhang - ML researcher </li>
             <li>Serge Belongie - Academic advisor [<a href="https://vision.cornell.edu/se3/people/serge-belongie/">www</a>]</li>
             <li>David Kline - Academic advisor [<a href="http://scrippsscholars.ucsd.edu/dkline/biocv">www</a>]</li>
             <li>Ben Neal - Academic advisor [<a href="https://www.livingoceansfoundation.org/profile/bneal/">www</a>]</li>
