Make Backend Overview somewhat leaner and paginated so that it loads much faster.
In a rush to get this out now, so the changes are unpolished in some ways. For example: "Note: Sources with "Queued ... image classification(s)" which are colored as in-progress may actually be done processing instead."

--- a/project/api_management/templates/api_management/job_list.html
+++ b/project/api_management/templates/api_management/job_list.html
@@ -6,16 +6,16 @@
 {% block css-code %}
 <style>
 tr[data-status="{{ PENDING }}"] {
-  background-color: #bbe;
+  background-color: var(--status-color-pending);
 }
 tr[data-status="{{ IN_PROGRESS }}"] {
-  background-color: #eeb;
+  background-color: var(--status-color-in-progress);
 }
 tr[data-status="{{ DONE }}"] {
-  background-color: #beb;
+  background-color: var(--status-color-done);
 }
 td.failure {
-  background-color: #ebb;
+  background-color: var(--status-color-failure);
 }
 </style>
 {% endblock %}
