Backend overview: have the image-counts summary separate out images whose sources have the backend disabled.

--- a/project/vision_backend/templates/vision_backend/overview.html
+++ b/project/vision_backend/templates/vision_backend/overview.html
@@ -48,6 +48,11 @@ tr.source-row.needs_processing {
       <td>{{ img_stats.pct_unclassified_without_features }}</td>
     </tr>
     <tr>
+      <td>Source has backend disabled</td>
+      <td>{{ img_stats.backend_disabled }}</td>
+      <td>{{ img_stats.pct_backend_disabled }}</td>
+    </tr>
+    <tr>
       <td>All</td>
       <td>{{ img_stats.total }}</td>
       <td>100.0%</td>
