Add QUnit tests for AsyncMedia.js and util.js's fetch().
Make QUnit tests a bit more structured. Warranted since there was previously only one QUnit test module, and now there are three.

Make util.fetch()'s callback param optional, so that one could opt to use then() on the returned Promise instead.

--- a/project/lib/templates/lib/admin_tools.html
+++ b/project/lib/templates/lib/admin_tools.html
@@ -27,6 +27,8 @@
   <br>
   <h2>QUnit test pages</h2>
   <ul class="detail_list">
+    <li><a href="{% url 'js_test_util' %}">util.js</a></li>
+    <li><a href="{% url 'async_media:js_test_async_media' %}">Async Media</a></li>
     <li><a href="{% url 'js_test_browse_images_actions' %}">Browse Images - Actions</a></li>
   </ul>
 {% else %}
