Add QUnit tests for Poller.js.
Also fix the Poller constructor's optional args.

--- a/project/lib/templates/lib/admin_tools.html
+++ b/project/lib/templates/lib/admin_tools.html
@@ -30,6 +30,7 @@
     <li><a href="{% url 'js_test_util' %}">util.js</a></li>
     <li><a href="{% url 'async_media:js_test_async_media' %}">Async Media</a></li>
     <li><a href="{% url 'js_test_browse_images_actions' %}">Browse Images - Actions</a></li>
+    <li><a href="{% url 'js_test_poller' %}">Poller</a></li>
   </ul>
 {% else %}
   <br>
