--- a/project/lib/templates/lib/admin_tools.html
+++ b/project/lib/templates/lib/admin_tools.html
@@ -31,6 +31,7 @@
     <li><a href="{% url 'async_media:js_test_async_media' %}">Async Media</a></li>
     <li><a href="{% url 'js_test_browse_images_actions' %}">Browse Images - Actions</a></li>
     <li><a href="{% url 'js_test_poller' %}">Poller</a></li>
+    <li><a href="{% url 'js_test_source_edit' %}">Source - Edit form</a></li>
   </ul>
 {% else %}
   <br>
