--- a/project/visualization/templates/visualization/edit_metadata.html
+++ b/project/visualization/templates/visualization/edit_metadata.html
@@ -1,4 +1,5 @@
 {% extends "sources/base_source.html" %}
+{% load static %}
 {% load thumbnail %}
 {% load guardian_tags %}
 {% load common_tags %}
@@ -9,7 +10,6 @@
 {% endblock %}
 
 {% block page-specific-includes %}
-  {% include "static-local-include.html" with type="js" path="js/ImageSearchHelper.js" %}
   {% include "static-local-include.html" with type="js" path="js/ImageMetadataFormHelper.js" %}
 
   {% include "static-local-include.html" with type="css" path="css/browse.css" %}
@@ -34,8 +34,14 @@
   {% endif %}
 
   {# Script in the body will run on page load. #}
+
+  <script type="module">
+    import MultiValueFieldHelper from "{% static 'js/MultiValueFieldHelper.js' %}";
+    MultiValueFieldHelper.setUpFieldBasedVisibility(
+        document.getElementById('search-form'));
+  </script>
+
   <script type="text/javascript">
-    ImageSearchHelper.init();
     {% if num_images > 0 %}
       initMetadataForm({
           metadataSaveAjaxUrl: '{% url 'edit_metadata_ajax' source.id %}'
