--- a/project/static/css/master.css
+++ b/project/static/css/master.css
@@ -207,12 +207,6 @@ h2{
     margin-bottom: 1.0em;
 }
 
-/* Smaller text on the same line as the main h2 text. */
-h2 span.subheader{
-    font-size: 0.7em;
-    text-transform: none;
-}
-
 h3{
     font-size: 1.2em;
     margin: 0 0 5px;
@@ -401,30 +395,6 @@ label.grid_checkbox {
     width: 150px;
 }
 
-/* An input element's label that also doubles as a section header.
-   For example, the section may be an optional part of the form, and the
-   input element may be a checkbox toggling that section on and off.
-
-   This is supposed to look like a section header, so it uses basically
-   the same style as .section_header h3 and legend.small. */
-label.section_header {
-    display: inline-block;
-
-    padding: 5px 0 6px 0;
-    border-bottom: 1px solid #ddd;
-    margin-bottom: 5px;
-    font-size: 1.2em;
-    color: #ab292a;
-    font-weight: bold;
-    text-transform: none;
-}
-
-/* ...and if the section is toggled off, then
-   we can style this differently. */
-label.section_header.disabled {
-    color: #888888;
-}
-
 
 .field_wrapper {
     display: inline-block;
@@ -461,6 +431,13 @@ input[type=password], input[type=file], textarea, span.editable {
 
 input[type=checkbox] {
     padding: 14px 0;
+}
+
+input[hidden] {
+    /* Since a display was specified for various inputs above, we must
+       specify that when such an input gets the hidden attribute, it
+       shouldn't be displayed. */
+    display: none;
 }
 
 /* Dropdown box */
@@ -589,64 +566,10 @@ ul.errorlist li {
     
 }
 
-/* Help text for a field (e.g. "No more than 20 characters") */
-.helptext {
-    display: block;
-    line-height: 120%;
-    width: 500px;
-}
-
-.helptext_small {
-    display: block;
-    font-size: 0.9em;
-    width: 500px;
-}
-
-.helptext_long {
-    display: block;
-    line-height: 120%;
-    width: 800px;
-}
-
-.extra_help_text, .dialog_help_text, .tutorial-message {
-    /* Extra help text starts out hidden, and can be shown via Javascript
-       when the user clicks a button or link. */
+.tutorial-message {
+    /* Starts out hidden, and can be shown via Javascript
+       when the user clicks a button. */
     display: none;
-}
-
-a.extra_help_text_link, a.dialog_help_text_link {
-    cursor: pointer;
-
-    font-size: 0.9em;
-}
-
-/* For groups of fields */
-fieldset {
-    margin: 0 0 20px 0;
-    border-bottom: 1px solid #ddd;
-}
-/* A special header, conventionally for fieldsets */
-/* Note: legends are only supposed to be in fieldsets, according to W3C.
-   In contrast, h1, h2, etc. can go anywhere. */
-legend {
-    padding: 5px 0 6px 0;
-    border-bottom: 1px solid #ddd;
-    margin-bottom: 5px;
-    font-size: 1.3em;
-    color: #777;
-    font-weight: bold;
-	text-transform: uppercase;
-}
-legend.small {
-    font-size: 1.2em;
-    text-transform: none;
-}
-legend.smaller {
-    padding: 0;
-    border: none;
-    font-size: inherit;
-    color: inherit;
-    text-transform: none;
 }
 
 
@@ -657,7 +580,6 @@ legend.smaller {
 .checkbox_row td.clickable_cell{
     cursor: pointer;
 }
-/* Multiple classes like .class1.class2 may not work in IE6 */
 .checkbox_row.selected td.clickable_cell{
     background-color: #bbbbdd;
 }
